[project]
name = "churchfinder"
version = "0.0.1"
authors = [
  { name="Jonas Lindner"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["setuptools>=61.0"]
[options]
install_requires = "requests"

build-backend = "setuptools.build_meta"